test/files/neg/t3222.check
<<<<<<< HEAD
t3222.scala:1: error: not found: type B
@throws(classOf[B])
                ^
t3222.scala:4: error: not found: type D
  def foo(@throws(classOf[D]) x: Int) {}
                          ^
t3222.scala:3: error: not found: type C
  @throws(classOf[C])
                  ^
t3222.scala:6: error: not found: type E
  @throws(classOf[E])
                  ^
four errors found
=======
t3222.scala:4: error: not found: type D
  def foo(@throws(classOf[D]) x: Int) {}
                          ^
t3222.scala:1: error: not found: type B
@throws(classOf[B])
                ^
two errors found
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
